--- a/.gitignore
+++ b/.gitignore
@@ -15,15 +15,15 @@ $RECYCLE.BIN/
 *.msp
 
 #bin and obj folders
-RestClient.NET/Packages/
-RestClient.NET/RestClient.NET.sln.ide/
-RestClient.NET/TestResults/
-RestClient.NET/Examples/OpenWeatherMapAPI/bin/
-RestClient.NET/Examples/OpenWeatherMapAPI/obj/
-RestClient.NET/UnitTests/RestClient.NET_Tests/bin/
-RestClient.NET/UnitTests/RestClient.NET_Tests/obj/
-RestClient.NET/RestClient.NET/bin/
-RestClient.NET/RestClient.NET/obj/
+Packages/
+RestClient.NET.sln.ide/
+TestResults/
+Examples/OpenWeatherMapAPI/bin/
+Examples/OpenWeatherMapAPI/obj/
+UnitTests/RestClient.NET_Tests/bin/
+UnitTests/RestClient.NET_Tests/obj/
+RestClient.NET/bin/
+RestClient.NET/obj/
 
 # =========================
 # Operating System Files
