Added a mocking system for RestClientBase responses
Basically, RestClientBaseTests inherits RestClientBase. In SetupCreds
(needs to be renamed) we replace the HttpClient with one that has
MockableResponses. Thus, if we pass in data that gets to the http
request we'll just pull a predefined response.

--- a/RestClient.NET/RestClient.NET.csproj
+++ b/RestClient.NET/RestClient.NET.csproj
@@ -42,7 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Exceptions\RestErrorResponseException.cs" />
-    <Compile Include="Exceptions\RestHelperException.cs" />
+    <Compile Include="Exceptions\RestClientDotNetException.cs" />
     <Compile Include="Extensions\DictionaryEx.cs" />
     <Compile Include="Models\Attributes\ParameterDef.cs" />
     <Compile Include="Models\Attributes\SegmentDef.cs" />
