Code Cleanup Part 1.
Added ConfigureAwait where needed. Made a few classes internal. Added
the unit test assmebly as a friend to RestClient.NET.  Made
IRestDataSerializer and RestClientBase both Disposable.  Code coverage
is now at about 85%... However, Most of the tests aren't really hitting
edge cases. The code still lacks commenting where needed. My next commit
will be mostly additional unit tests and code comments.

--- a/RestClient.NET/RestClient.NET.csproj
+++ b/RestClient.NET/RestClient.NET.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Exceptions\RestErrorResponseException.cs" />
     <Compile Include="Exceptions\RestClientDotNetException.cs" />
     <Compile Include="Extensions\DictionaryEx.cs" />
+    <Compile Include="FriendAssemblies.cs" />
     <Compile Include="Models\Attributes\ParameterDef.cs" />
     <Compile Include="Models\Attributes\SegmentDef.cs" />
     <Compile Include="Models\Attributes\UrlDefinitionBase.cs" />
