Comments and code cleanup
Code cleanup and comments added through out.

--- a/RestClient.NET/RestClient.NET.csproj
+++ b/RestClient.NET/RestClient.NET.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Serializers\JsonRestDataSerializer.cs" />
     <Compile Include="Serializers\IRestDataSerializer.cs" />
     <Compile Include="Serializers\XmlRestDataSerializer.cs" />
-    <Compile Include="Web\RestUrl.cs" />
+    <Compile Include="Web\RestUrlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
