Code Cleanup. Added support for Delete and Put.
Added RestPutRequest and RestDeleteRequest POCOs. Added support for them
in the RestClientBase abstract class.

--- a/Examples/OpenWeatherMapAPI/OpenWeatherMapAPI.csproj
+++ b/Examples/OpenWeatherMapAPI/OpenWeatherMapAPI.csproj
@@ -32,10 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestClient.NET, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\RestClient.NET.0.1.3\lib\portable-net45+wp81+win8\RestClient.NET.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -53,7 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\RestClient.NET\RestClient.NET.csproj">
+      <Project>{8883237e-9602-432d-a8c9-f7be1becee99}</Project>
+      <Name>RestClient.NET</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
