ErrorLogging Interface for integration
You can now implement an interface(IResetClientLogger) on your logging
system and pass it into RCDN to integrate RCDN logging into your
centralized logging system.

--- a/RestClient.NET/RestClient.NET.csproj
+++ b/RestClient.NET/RestClient.NET.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Serializers\JsonRestDataSerializer.cs" />
     <Compile Include="Serializers\IRestDataSerializer.cs" />
     <Compile Include="Serializers\XmlRestDataSerializer.cs" />
+    <Compile Include="Utils\IRestClientLogger.cs" />
     <Compile Include="Web\RestUrlBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
